--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="sunset_sky">#ec8100</color>
     <color name="night_sky">#05192e</color>
     <color name="sea">#224869</color>
+
+    <color name="heat_sun">#FFfcfcb7</color>
+    <color name="cold_sun">#FFff0000</color>
 </resources>
